fix per dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,8 @@ body, html {
     font-weight: 600;
     scroll-behavior: smooth;
     margin-bottom: 40px;
-    height: 90%;
+    height: 100%;
+    background-color: transparent;
     font-family: 'Cairo', sans-serif;
 	
 }
